<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_perfil"
            android:icon="@drawable/ic_profile"
            android:title="@string/perfil" />

        <item
            android:id="@+id/menu_fotos"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/fotos" />

        <item
            android:id="@+id/menu_mail"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/email" />

    </group>

    <item
        android:title="@string/otras_opciones">

        <menu>
            <item
                android:id="@+id/menu_borrar"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="@string/borrar" />

            <item
                android:id="@+id/menu_ayuda"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/ayuda" />
        </menu>
    </item>

</menu>